--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "An app that helps you generates CSS to create UI in the Neumorphic/Neomorphic style.",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rawallon.github.io/Neumorphic-CSS-Generator",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
